--- a/root/adm/style/acp_colorized.html
+++ b/root/adm/style/acp_colorized.html
@@ -13,7 +13,7 @@
 	</div>
 <!-- ENDIF -->
 
-<form id="acp_board" method="post" action="{U_ACTION}">
+<form id="acp_colorized" method="post" action="{U_ACTION}">
 
 <!-- BEGIN options -->
 	<!-- IF options.S_LEGEND -->
